--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodejs app.js"
   },
-  "author": "Ramiro Blázquez",
+  "author": "Ramiro Blázquez y Jose Antonio González",
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.0"
